--- a/DCgan_2_2.ipynb
+++ b/DCgan_2_2.ipynb
@@ -558,13 +558,40 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reference\n",
+        "''' The code scripted were adapted from following source\n",
+        " URL: https://github.com/keras-team/keras\n",
+        " URL: https://github.com/eriklindernoren/PyTorch-GAN/blob/master/implementations/dcgan/dcgan.py\n",
+        " URL: https://github.com/nicknochnack/GANBasics/blob/main/FashionGAN-Tutorial.ipynb\n",
+        " URL: https://www.tensorflow.org/tutorials/images/data_augmentation\n",
+        " URL: https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/image/ImageDataGenerator\n",
+        " URL: https://colab.research.google.com/drive/10rnPKb4Hnr4pN-hihZfMK2QLrsJEgJm0?usp=sharing '''"
+      ],
+      "metadata": {
+        "id": "kNk9TamHcWd6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wAlBjUbgeWB2"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOdbPzoE5Xlr/VsqG4al4A6",
+      "authorship_tag": "ABX9TyOdWfegzFnHqGjCiTj40k34",
       "include_colab_link": true
     },
     "kernelspec": {
